Ozhaev Zaynudin Game.cpp.g++log.txt
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:11:26: error: 'Photo' has not been declared
 void DrawBall_Pad(int i, Photo .Pad, Photo .Ball, Ball ball1, Ball ball2, Ball ball3);
                          ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:11:32: error: expected ',' or '...' before '.' token
 void DrawBall_Pad(int i, Photo .Pad, Photo .Ball, Ball ball1, Ball ball2, Ball ball3);
                                ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp: In function 'void MoveBall()':
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:169:25: error: 'Pad' was not declared in this scope
         DrawBall_Pad(i, Pad, Ball, ball1, ball2, ball3)
                         ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:169:34: error: expected primary-expression before ',' token
         DrawBall_Pad(i, Pad, Ball, ball1, ball2, ball3)
                                  ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:172:9: error: expected ';' before 'ball1'
         ball1.Drow();
         ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:90:9: warning: unused variable 'sizeBall_X' [-Wunused-variable]
     int sizeBall_X = txGetExtentX (Photo .Ball)/8;
         ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:91:9: warning: unused variable 'sizeBall_Y' [-Wunused-variable]
     int sizeBall_Y = txGetExtentY (Photo .Ball);
         ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp: In function 'void CollisionBall(Ball*, Ball*)':
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:322:48: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
      double d = sqrt (Dx*Dx + Dy*Dy); if (d == 0) d = 0.01; // гипотенуза
                                                ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:333:28: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
         if ((Vn1 - Vn2) == 0) Vn1 = Vn1 + 0.01;
                            ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:347:44: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
         d = sqrt (Dx*Dx + Dy*Dy); if (d == 0) d = 0.01;
                                            ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp: At global scope:
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:393:26: error: 'Photo' has not been declared
 void DrawBall_Pad(int i, Photo .Pad, Photo .Ball, Ball ball1, Ball ball2, Ball ball3)
                          ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:393:32: error: expected ',' or '...' before '.' token
 void DrawBall_Pad(int i, Photo .Pad, Photo .Ball, Ball ball1, Ball ball2, Ball ball3)
                                ^
In file included from c:\users\zainu\desktop\курс\codeblocks\mingw\include\txlib.h:1:0,
                 from C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:1:
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp: In function 'void DrawBall_Pad(int, int)':
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:395:36: error: 'Photo' was not declared in this scope
     int sizeBall_X = txGetExtentX (Photo .Ball)/8;
                                    ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:399:5: error: expected ',' or ';' before 'if'
     if (ball1 .y <= (H + 50)/2)
     ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:403:9: error: 'else' without a previous 'if'
         else
         ^
In file included from c:\users\zainu\desktop\курс\codeblocks\mingw\include\txlib.h:1:0,
                 from C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:1:
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:405:31: error: 'ball1' was not declared in this scope
         txAlphaBlend (txDC(), ball1 .x - 55, ball1 .y - 100, sizePad, sizePad, Photo .Pad, 0, sizePad);
                               ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:407:9: error: 'ball2' was not declared in this scope
     if (ball2 .y <= (H + 50)/2)
         ^
In file included from c:\users\zainu\desktop\курс\codeblocks\mingw\include\txlib.h:1:0,
                 from C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:1:
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:416:27: error: 'ball3' was not declared in this scope
     txAlphaBlend (txDC(), ball3 .x - 25, ball3 .y - 25, sizeBall_Y, 0, Photo .Ball, sizeBall_X * i + 4, 0);
                           ^
---------------------------------------------------------------------------------------------
[05.07.2021  2:32:23,33 C:\Users\zainu@DESKTOP-ZAINU, returned 1]
C:\Users\zainu\Desktop\курс\Game> g++.exe "C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp" -o "C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.exe"  -Wshadow -Winit-self -Wredundant-decls -Wcast-align -Wundef -Wfloat-equal -Winline -Wunreachable-code -Wmissing-declarations -Wmissing-include-dirs -Wswitch-enum -Wswitch-default -Weffc++ -Wmain -Wextra -Wall -g -pipe -fexceptions -Wcast-qual -Wconversion -Wctor-dtor-privacy -Wempty-body -Wformat-security -Wformat=2 -Wignored-qualifiers -Wlogical-op -Wmissing-field-initializers -Wnon-virtual-dtor -Woverloaded-virtual -Wpointer-arith -Wsign-promo -Wstack-usage=8192 -Wstrict-aliasing -Wstrict-null-sentinel -Wtype-limits -Wwrite-strings -D_DEBUG -D_EJUDGE_CLIENT_SIDE -D_EJC
